src/objects/pse__Revenue_Forecast_Setup__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastHelp</customHelpPage>
    <description>Stores the settings for running a revenue forecast.</description>
    <fields>
        <fullName>pse__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the revenue forecast setup record used for revenue forecast calculations. You can only have one active revenue forecast setup record.</description>
        <inlineHelpText>Indicates the revenue forecast setup record used for revenue forecast calculations. You can only have one active revenue forecast setup record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, opportunities are excluded from revenue forecast scheduled jobs.</description>
        <inlineHelpText>If selected, opportunities are excluded from revenue forecast scheduled jobs.</inlineHelpText>
        <label>Exclude Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Resource_Requests_On_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue relating to held resource requests is excluded from revenue forecasts.</description>
        <inlineHelpText>Select to exclude revenue relating to held resource requests on projects and milestones.</inlineHelpText>
        <label>Exclude Resource Requests on Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Factor_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Number of records to be processed at the same time, such as timecards and expenses.</description>
        <inlineHelpText>Number of records to be processed at the same time, such as timecards and expenses.</inlineHelpText>
        <label>Forecast Factor Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Number of opportunities and opportunity line items to be processed at the same time.</description>
        <inlineHelpText>Number of opportunities and opportunity line items to be processed at the same time.</inlineHelpText>
        <label>Opportunity Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Batch_Size__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Number of projects to be processed at the same time.</description>
        <inlineHelpText>Number of projects to be processed at the same time.</inlineHelpText>
        <label>Project Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_End_Date_on_Opportunity__c</fullName>
        <description>The API name of the field on the Opportunity object you want to use as the expected project end date.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the API name of the field on the Opportunity object you want to use as the expected project end date.</inlineHelpText>
        <label>Expected Project End Date Field on Opp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Start_Date_on_Opportunity__c</fullName>
        <description>The API name of the field on the Opportunity object you want to use as the expected project start date.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the API name of the field on the Opportunity object you want to use as the expected project start date.</inlineHelpText>
        <label>Expected Project Start Date Field on Opp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours_Field_on_Project__c</fullName>
        <description>The API name of the field on the Project object you want to use to calculate the value in the % Hours Completed For Recognition field. If required, you can create your own field and add it to the picklist.</description>
        <inlineHelpText>Select the API name of the field on the Project object you want to use to calculate the value in the % Hours Completed For Recognition field. If required, you can create your own field and add it to the picklist.</inlineHelpText>
        <label>Total Hours Field on Project</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pse__Estimated_Hours_at_Completion__c</fullName>
                    <default>true</default>
                    <label>pse__Estimated_Hours_at_Completion__c</label>
                </value>
                <value>
                    <fullName>pse__Planned_Hours__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Forecast Setup</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RFS-{0000}</displayFormat>
        <label>Revenue Forecast Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>